# emerging-tech-radar

./: .flake8  .gitignore  README.md  docker-compose.yml  pyproject.toml  user_story_analysis.md
.github/workflows/: ci.yml
docs/: data_schema.md  flow.md
innovation_system/: Dockerfile  PLAN.md  PROJECT_RATING.md  README.md  requirements.txt
innovation_system/config/: settings.py
innovation_system/data_collection/: collectors.py
innovation_system/feature_engineering/: engineer.py
innovation_system/main/: run.py
innovation_system/model_development/: predictor.py
innovation_system/monitoring/: monitor.py
innovation_system/prediction/: generator.py
innovation_system/tests/: test_collectors.py  test_config_settings.py  test_engineer.py  test_generator.py  test_integration.py  test_logging.py  test_monitor.py  test_predictor.py  test_predictor_data_prep.py  test_run_e2e.py  test_uncertainty_manager.py
innovation_system/uncertainty_handling/: manager.py
